gateway.yaml
# helm template inference-gateway charts/llm-d-infra > manifest.yaml
# removed Ingress
---
# Source: llm-d-infra/templates/gateway-infrastructure/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: inference-gateway-inference-gateway
  labels:
    app.kubernetes.io/name: llm-d-infra
    helm.sh/chart: llm-d-infra-1.0.7
    app.kubernetes.io/instance: inference-gateway
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: "0.1"
    app.kubernetes.io/gateway: inference-gateway-inference-gateway
    app.kubernetes.io/component: inference-gateway
spec:
  gatewayClassName: "kgateway"
  listeners:
    - name: default
      port: 8080
      protocol: HTTP
  infrastructure:
    parametersRef:
      name: inference-gateway-inference-gateway
      group: gateway.kgateway.dev
      kind: GatewayParameters
